Closed Bug 386854 Opened 18 years ago Closed 18 years ago

Bustage build fix MOZ_XUL disabled

Categories

(Core :: XUL, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: romaxa, Assigned: romaxa)

References

Details

Attachments

(1 file)

Attached patch Build fixSplinter Review
Building without MOZ_XUL (embedding-profile=minimal) failed after fixing Bug 380872 and Bug 53901 In bug 53901 https://bugzilla.mozilla.org/attachment.cgi?id=265905 with r+ but not committed yet.
Attachment #270913 - Flags: superreview?(bzbarsky)
Attachment #270913 - Flags: review?(bzbarsky)
Comment on attachment 270913 [details] [diff] [review] Build fix Looks ok.
Attachment #270913 - Flags: superreview?(bzbarsky)
Attachment #270913 - Flags: superreview+
Attachment #270913 - Flags: review?(bzbarsky)
Attachment #270913 - Flags: review+
Er... I'd already reviewed this. Why are you wasting my time with making me do things twice, exactly? If all you need is to get things checked in, file the bug, put "[checkin needed]" in the status whiteboard, and attach a patch. Or even simpler, ask on IRC.
Whiteboard: [checkin needed]
>do things twice, exactly? Not exactly, previous patch was for bug 53901, this new += Bug 380872 Sorry...
Keywords: checkin-needed
Whiteboard: [checkin needed]
Assignee: jag → romaxa
content/base/src/nsGenericElement.cpp 3.579
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: