Bug 386854 - Bustage build fix MOX_XUL disabled, patch by romaxa <romaxa@gmail.com>, r+sr=bzbarsky